--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="index-old.html">Blog</a>
           </nav>
         </header>
       </div>
