--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="index-old.html">Blog</a>
+            <a href="/blog/">Blog</a>
           </nav>
         </header>
       </div>
