--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,17 @@ footer {
   text-align: center;
 }
 
+.notes {
+  padding: 20px 0;
+  border-top: 1px solid $lightGray;
+  font-size: 12px;
+  font-style: italic;
+
+  @include mobile {
+    text-align: center;
+  }
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
