--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
           <nav>
             <a href="/blog/">Blog</a>
             <a href="/qna/">QnA</a>
+            <a href="/hire-me/">Hire me</a>
           </nav>
         </header>
       </div>
